--- a/src/app.css
+++ b/src/app.css
@@ -45,8 +45,28 @@ body {
 
 a {
     color: black;
-    transition: color 0.3s;
+    text-decoration: none;
+    transition: color 0.3s, background-size 0.3s;
+    background:
+        linear-gradient(
+            to right,
+            rgba(0, 0, 0, 1),
+            rgba(0, 0, 0, 1)
+            ),
+        linear-gradient(
+            to right,
+            rgba(186, 50, 227, 1),
+            rgba(124, 11, 158, 1)
+        );
+    background-size: 100% 1.5px, 0 1.5px;
+    background-position: 100% 100%, 0 100%;
+    background-repeat: no-repeat;
 }
-a:hover {
-    color: #026070;
+a:visited {
+    /* Must be before hover */
+    color: black;
+}
+a:hover, a:focus {
+    color: #7c0b93;
+    background-size: 0 1.5px, 100% 1.5px;
 }
